--- a/nginx-failover/nodes/proxy/ddf.dev.conf
+++ b/nginx-failover/nodes/proxy/ddf.dev.conf
@@ -1,3 +1,7 @@
+upstream backend {
+    server ddf1:8993;
+    server ddf2:8993;
+}
 server {
     listen 80;
     return 301 https://$host$request_uri;
@@ -5,37 +9,27 @@ server {
 
 server {
 
-    listen 443;
-    server_name ddf.dev;
+  listen 443;
+  server_name ddf.dev;
 
-    ssl_password_file         /etc/nginx/key.pass;
-    ssl_certificate           /etc/nginx/ddf.dev.crt;
-    ssl_certificate_key       /etc/nginx/ddf.dev.key;
+  ssl_password_file         /etc/ssl/private/key.pass;
+  ssl_certificate           /etc/ssl/certs/ddf.dev.crt;
+  ssl_certificate_key       /etc/ssl/private/ddf.dev.key;
 
-    ssl on;
-    ssl_session_cache  builtin:1000  shared:SSL:10m;
-    ssl_protocols  TLSv1 TLSv1.1 TLSv1.2;
-    ssl_ciphers HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
-    ssl_prefer_server_ciphers on;
+  ssl on;
+  ssl_session_cache  builtin:1000  shared:SSL:10m;
+  ssl_protocols  TLSv1 TLSv1.1 TLSv1.2;
+  ssl_ciphers HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
+  ssl_prefer_server_ciphers on;
 
-    access_log            /var/log/nginx/ddf.access.log;
+  access_log            /var/log/nginx/ddf.access.log;
 
-    location / {
+  location / {
 
-      proxy_set_header X-Forwarded-Host $host:$server_port;
-      proxy_set_header X-Forwarded-Server $host;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_pass https://ddf1:8993;
-
-      #proxy_set_header        Host $host;
-      #proxy_set_header        X-Real-IP $remote_addr;
-      #proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-      #proxy_set_header        X-Forwarded-Proto $scheme;
-
-      # Fix the “It appears that your reverse proxy set up is broken" error.
-      #proxy_pass          https://ddf1:8993;
-      #proxy_read_timeout  90;
-
-      #proxy_redirect      https://ddf1:8993 https://ddf.dev;
-    }
+    proxy_set_header X-Forwarded-Host $host:$server_port;
+    proxy_set_header X-Forwarded-Server $host;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_pass https://backend;
+    proxy_next_upstream     error timeout invalid_header http_500;
   }
+}
