Updated HAProxy Compose File and Readme
Compose file now builds haproxy image.
Readme now covers very basic configuration settings for testing.

--- a/haproxy-failover/docker-compose.yml
+++ b/haproxy-failover/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '2'
 services:
   proxy:
-    image: hap-16
+    build: ./nodes/haproxy
+    image: hap16-ddf
     networks:
       default:
         aliases:
